Going through mobile mode and fixing spacing on pages

--- a/themes/sports-on-campus/sass/_coaches-page.scss
+++ b/themes/sports-on-campus/sass/_coaches-page.scss
@@ -22,7 +22,7 @@
         padding-bottom: 10px;
     }
     h4{
-        padding-top: 1rem;
+        margin-top: 0;
         letter-spacing: 1.5px;
         word-spacing: 2px;
         font-weight: 900;
@@ -63,7 +63,7 @@
         }
 
     .wp-block-button{
-        margin-top: 10rem;
+        margin-top: 3rem;
     }
 }
 
